java11用のプロファイル追加 (#16)